tests/extensions/editheader/errors/runtime-error.sieve
require "editheader";
require "fileinto";

addheader "X-Frop" "Friep";

fileinto "Rediculous.non-existent.folder";
